--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=home-energy
+# Datos de conexión a la base de datos MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/energia_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=carolan
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Dialecto de MySQL para JPA (Java Persistence API)
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Configuraciones adicionales de JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
